# MdDiary

./: .gitignore  README.md  install.sh  pyproject.toml
assets/: config-example.json  mermaid.min.js  styles-example.css
mdiary/: __init__.py  cli.py  config.py
